--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-
+version: "3.9"
 
 services:
   backend:
-    build: ./BackendDjango
-    container_name: BackendDjango
+    build:
+      context: ./BackendDjango
+      dockerfile: Dockerfile
+    container_name: backend
     command: python manage.py runserver 0.0.0.0:8000
-    working_dir: /app
     volumes:
       - ./BackendDjango:/app
     ports:
@@ -13,22 +14,12 @@ services:
     depends_on:
       - db
     environment:
-      - DEBUG=1
-
-  frontend:
-    build:
-      context: ./web-builder2
-      dockerfile: Dockerfile
-    container_name: frontend
-    working_dir: /app
-    command: npm run dev
-    volumes:
-      - ./web-builder2:/app
-      - /app/node_modules
-    ports:
-      - "5173:5173"
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+      - DEBUG=0
+      - DB_NAME=mydb
+      - DB_USER=user
+      - DB_PASSWORD=password
+      - DB_HOST=db
+      - DB_PORT=5432
 
   db:
     image: postgres:13
@@ -41,6 +32,17 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
+
+  frontend:
+    build:
+      context: .
+      dockerfile: ./web-builder2/Dockerfile
+    container_name: frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+
 
 volumes:
   postgres_data:
